Add new project

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EmilyRB's projects</title>
-	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="https://use.fontawesome.com/000f9a0c3a.js"></script>
     <script src="script.js"></script>
 </head>
@@ -41,24 +42,24 @@
 	<div id="projects" class="row">
 		<div class="container">
 			<h2>projects</h2>
-			<div class="port-ex">
+			<a href="projects/spongebobchat.html"><div class="port-ex">
+				<p>Spongebob Bird meme text converter</p>
+			</div></a>
+			<a href=""><div class="port-ex">
 				<p>Placeholder</p>
-			</div>
-			<div class="port-ex">
+			</div></a>
+			<a href=""><div class="port-ex">
 				<p>Placeholder</p>
-			</div>
-			<div class="port-ex">
+			</div></a>
+			<a href=""><div class="port-ex">
 				<p>Placeholder</p>
-			</div>
-			<div class="port-ex">
+			</div></a>
+			<a href=""><div class="port-ex">
 				<p>Placeholder</p>
-			</div>
-			<div class="port-ex">
+			</div></a>
+			<a href=""><div class="port-ex">
 				<p>Placeholder</p>
-			</div>
-			<div class="port-ex">
-				<p>Placeholder</p>
-			</div>
+			</div></a>
 		</div>
 	</div>
 	<div id="something" class="row">
