Fix spongebob project paths

--- a/projects/spongebobchat.html
+++ b/projects/spongebobchat.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-	<div id="https://emilyrb.github.io" style="border:3px solid black;">HOME</div>
+	<div id="https://emilyrb.github.io" style="border:3px solid black;width:70px;height:50px;">HOME</div>
 	<div id="container">
 		Translate: </br><textarea cols="50" rows="10" id="input"></textarea></br>
 		SpOnGeBoB cHaT: </br><textarea cols="50" rows="10" id="output"></textarea>
 	</div>
-	<script src="js/scripts.js"></script>
+	<script src="js/spongebob-script.js"></script>
 </body>
 </html>
