--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EmilyRB's projects</title>
+    <title>Emily's projects</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="https://use.fontawesome.com/000f9a0c3a.js"></script>
-    <script src="script.js"></script>
+    <!--<script src="script.js"></script>-->
 </head>
 <body>
 	<nav>
@@ -41,7 +40,7 @@
 	</div>
 	<div id="projects" class="row">
 		<div class="container">
-			<h2>projects</h2>
+			<h2>Projects</h2>
 			<a href="projects/spongebobchat.html"><div class="port-ex">
 				<p>Spongebob Bird meme text converter</p>
 			</div></a>
