--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<div id="projects" class="row">
 		<div class="container">
 			<h2>Projects</h2>
-			<a href="projects/spongebobchat.html"><div class="port-ex">
+			<a href="projects/spongebobchat.html"><div class="port-ex" style="background-image:url('projects/img/spongebob.jpg');">
 				<p>Spongebob Bird meme text converter</p>
 			</div></a>
 			<a href=""><div class="port-ex">
