--- a/projects/spongebobchat.html
+++ b/projects/spongebobchat.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<a href="https://emilyrb.github.io" style="border:3px solid black;width:70px;height:20px;">HOME</a>
+	<a href="https://emilyrb.github.io" style="border:3px solid black;width:70px;height:20px;position:absolute;top:0;left:0;">HOME</a>
 	<div id="container">
 		Translate: </br><textarea cols="50" rows="10" id="input"></textarea></br>
 		SpOnGeBoB cHaT: </br><textarea cols="50" rows="10" id="output"></textarea>
