Add new project

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 			<a href="projects/spongebobchat.html"><div class="port-ex" style="background-image:url('projects/img/spongebob.jpg');">
 				<p>Spongebob Bird meme text converter</p>
 			</div></a>
-			<a href=""><div class="port-ex">
-				<p>Placeholder</p>
+			<a href="projects/colourgame.html"><div class="port-ex">
+				<p>Colour game</p>
 			</div></a>
 			<a href=""><div class="port-ex">
 				<p>Placeholder</p>
