Add new project

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 			<a href="projects/colourgame.html"><div class="port-ex">
 				<p>Colour game</p>
 			</div></a>
-			<a href=""><div class="port-ex">
-				<p>Placeholder</p>
+			<a href="projects/hangman.html"><div class="port-ex">
+				<p>Hangman</p>
 			</div></a>
 			<a href=""><div class="port-ex">
 				<p>Placeholder</p>
