--- a/projects/hangman.html
+++ b/projects/hangman.html
@@ -2,20 +2,16 @@
 <html>
 <head>
 	<title>Hangman</title>
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 	<link rel='stylesheet' type='text/css' href='css/hangman-style.css'/>
     <script type='text/javascript' src='js/hangman-script.js'></script>
 </head>
 <body>
-	<a href="https://emilyrb.github.io" style="border:3px solid black;width:70px;height:20px;position:absolute;top:0;left:0;">HOME</a>
+	<!--<a href="https://emilyrb.github.io" style="border:3px solid black;width:70px;height:20px;position:absolute;top:0;left:0;">HOME</a>
 	<header>
-		<h1>Hangman<h1>
-		<h3>Guess the word<h3>
+		<h1>Hangman</h1>
+		<h3>Guess the word</h3>
 	</header>
 	<div id="main">
 		<div id="popUpBox">
@@ -44,7 +40,7 @@
 	</div>
 	<footer>
 		<h3>Coded by Emily G</h3>
-	</footer>
+	</footer>-->
 </body>
 </html>
 
