Add new project

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 			<a href="projects/hangman.html"><div class="port-ex">
 				<p>Hangman</p>
 			</div></a>
-			<a href=""><div class="port-ex">
-				<p>Placeholder</p>
+			<a href="projects/hexcolourgenerator.html"><div class="port-ex">
+				<p>Hex colour generator</p>
 			</div></a>
 			<a href=""><div class="port-ex">
 				<p>Placeholder</p>
