Fix project, Add project thumbnails

--- a/projects/hexcolourgenerator.html
+++ b/projects/hexcolourgenerator.html
@@ -9,7 +9,7 @@
     <script type='text/javascript' src='js/hexcolourgenerator-script.js'></script>
 </head>
 <body>
-	<a href="https://emilyrb.github.io" style="border:3px solid black;width:70px;height:20px;position:absolute;top:0;left:0;">HOME</a>
+	<a href="https://emilyrb.github.io" style="border:3px solid black;width:70px;height:20px;position:absolute;top:0;left:0;z-index:10;">HOME</a>
 	<div id="new">
 		<i class="fa fa-plus-circle" id="top" aria-hidden="true"></i>
 		<i class="fa fa-plus-circle" id="under"aria-hidden="true"></i>
