--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 			<a href="projects/spongebobchat.html"><div class="port-ex" style="background-image:url('projects/img/spongebob.jpg');">
 				<p>Spongebob Bird meme text converter</p>
 			</div></a>
-			<a href="projects/colourgame.html"><div class="port-ex">
+			<a href="projects/colourgame.html"><div class="port-ex" style="background-image:url('projects/img/project1.jpg');>
 				<p>Colour game</p>
 			</div></a>
-			<a href="projects/hangman.html"><div class="port-ex">
+			<a href="projects/hangman.html"><div class="port-ex" style="background-image:url('projects/img/project2.jpg');>
 				<p>Hangman</p>
 			</div></a>
 			<a href="projects/hexcolourgenerator.html"><div class="port-ex">
