Add recent project thumbnail

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<a href="projects/hangman.html"><div class="port-ex" style="background-image:url('projects/img/project2.jpg');>
 				<p>Hangman</p>
 			</div></a>
-			<a href="projects/hexcolourgenerator.html"><div class="port-ex">
+			<a href="projects/hexcolourgenerator.html"><div class="port-ex" style="background-image:url('projects/img/project3.jpg');>
 				<p>Hex colour generator</p>
 			</div></a>
 			<a href=""><div class="port-ex">
