--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
 			<a href="projects/spongebobchat.html"><div class="port-ex" style="background-image:url('projects/img/spongebob.jpg');">
 				<p>Spongebob Bird meme text converter</p>
 			</div></a>
+			<a href="projects/mastermind.html"><div class="port-ex" style="background-image:url('img/project4.png');">
+				<p>Mastermind game</p>
+			</div></a>
+			<a href="projects/hexcolourgenerator.html"><div class="port-ex" style="background-image:url('img/project3.png');">
+				<p>Hex colour generator</p>
+			</div></a>
 			<a href="projects/colourgame.html"><div class="port-ex" style="background-image:url('img/project1.png');">
 				<p>Colour game</p>
 			</div></a>
 			<a href="projects/hangman.html"><div class="port-ex" style="background-image:url('img/project2.png');">
 				<p>Hangman</p>
-			</div></a>
-			<a href="projects/hexcolourgenerator.html"><div class="port-ex" style="background-image:url('img/project3.png');">
-				<p>Hex colour generator</p>
-			</div></a>
-			<a href=""><div class="port-ex">
-				<p>Placeholder</p>
 			</div></a>
 			<a href=""><div class="port-ex">
 				<p>Placeholder</p>
