Add new project
project: wikipedia viewer

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
 				<p>Hangman</p>
 			</div></a>
 			<!--8/12/16--><a href="projects/twitchstatus.html"><div class="port-ex" style="background-image:url('img/project5.png');">
-				<p>TwitchTV Channel Status</p>
+				<p>TwitchTV channel status</p>
+			</div></a>
+			<!--8/12/16--><a href="projects/wikiviewer.html"><div class="port-ex" style="background-image:url('img/project6.png');">
+				<p>Wikipedia viewer</p>
 			</div></a>
 			<a href=""><div class="port-ex">
 				<p>Placeholder</p>
