Add weather app project

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 			<!--8/12/16--><a href="projects/wikiviewer.html"><div class="port-ex" style="background-image:url('img/project6.png');">
 				<p>Wikipedia viewer</p>
 			</div></a>
-			<a href=""><div class="port-ex">
-				<p>Placeholder</p>
+			<!--10/02/19--><a href="projects/weatherapp.html"><div class="port-ex" style="background-image:url('projects/img/pathInTheWoods.jpg');">
+				<p>Weather App</p>
 			</div></a>
 			<a href=""><div class="port-ex">
 				<p>Placeholder</p>
