Update script and style link

--- a/projects/weatherapp.html
+++ b/projects/weatherapp.html
@@ -9,8 +9,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-	<link rel='stylesheet' type='text/css' href='stylesheet.css'/>
-    <script type='text/javascript' src='script.js'></script>
+	<link rel='stylesheet' type='text/css' href='css/weatherapp-style.css'/>
+    <script type='text/javascript' src='js/weatherapp-script.js'></script>
 </head>
 <body>
 	<div class="cloudSpace">
