--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 	<div id="projects" class="row">
 		<div class="container">
 			<h2>Projects</h2>
-			<!--11/11/17--><a href="projects/spongebobchat.html"><div class="port-ex" style="background-image:url('projects/img/spongebob.jpg');">
+			<!--11/11/17--><!--<a href="projects/spongebobchat.html"><div class="port-ex" style="background-image:url('projects/img/spongebob.jpg');">
 				<p>Spongebob Bird meme text converter</p>
-			</div></a>
+			</div></a>-->
 			<!--27/12/16--><a href="projects/mastermind.html"><div class="port-ex" style="background-image:url('img/project4.png');">
 				<p>Mastermind game</p>
 			</div></a>
