Redesign entire website

--- a/projects/weatherapp.html
+++ b/projects/weatherapp.html
@@ -13,6 +13,7 @@
     <script type='text/javascript' src='js/weatherapp-script.js'></script>
 </head>
 <body>
+	<a href="https://emilyrb.github.io" style="border:3px solid black;width:70px;height:20px;position:absolute;top:0;left:0;">HOME</a>
 	<div class="cloudSpace">
 		<i class="fa fa-cloud" aria-hidden="true"></i>
 	</div>
