--- a/index.html
+++ b/index.html
@@ -1,153 +1,240 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emily's projects</title>
+	<title>Emily's Portfolio</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script src="https://use.fontawesome.com/000f9a0c3a.js"></script>
-    <!--<script src="script.js"></script>-->
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
-<body>
-	<nav>
-		<ul>
-			<div class="left">
-			<li><a href="#">Emily</a></li>
+<body id="top" data-spy="scroll" data-target=".navbar" data-offset="60">
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>                        
+				</button>
+				<a class="navbar-brand" href="#top">Emily</a>
 			</div>
-			<li><a href="#about">A Picture</a></li>
-			<li><a href="#projects">Projects</a></li>
-			<li><a href="#something">Something</a></li>
-			<li><a href="#contact">Contact Me</a></li>
-		</ul>
+			<div class="collapse navbar-collapse navbar-right" id="myNavbar">
+				<ul class="nav navbar-nav">
+				<li class="active"><a href="#top">Home</a></li>
+				<li><a href="#about">About</a></li>
+				<li><a href="#work">Work</a></li>
+				<li><a href="#contact">Contact</a></li>
+				</ul>
+			</div>
+		</div>
 	</nav>
-	<header>
-		<div class="header-box header-info">
-			Emily's projects
-		</div>
-		<a href="#contact"><div class="header-box header-btn">
-			Contact Me
-		</div></a>
-	</header>
-	<div id="about" class="row">
-		<h2>FEATURED PIC</h2>
-		<div class="container">
-			<div class="column left">
-				<img src="img/aboutImg.jpg">
-			</div>
-			<div class="column right">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor sapien sed tincidunt lacinia. In tempor, enim ullamcorper feugiat rhoncus, quam tellus facilisis nisi, quis dictum lacus mi vel ligula. Nunc cursus ligula vel libero pharetra, vitae commodo diam fringilla. Fusce feugiat metus rutrum magna dignissim maximus. In sit amet leo in tortor placerat maximus. Praesent tincidunt in lorem ac finibus. Curabitur cursus dui quis ex dapibus suscipit. Proin facilisis ex a ullamcorper tincidunt. Nunc pharetra quis nisl at vulputate. Curabitur pellentesque lorem eget fringilla luctus. Nulla facilisi. Sed viverra eleifend sapien, ac elementum sapien pellentesque ut. Ut ac blandit urna. Nunc eu venenatis velit.
+
+	<div class="jumbotron header">
+		<div class="container text-left">
+			<div class="header-text">
+				<h1>
+					<span class="title_text">Hello<span class="text_colour">,</span></span><br>
+					<span class="title_text">I </span><span class="title_text">am </span><span class="title_text">Emily<span class="text_colour">.</span></span><br>
+					<span class="typewrite title_text" data-period="2000" data-type='[ "Professional Student", "Wizard", "Teen Exorcist"]'></span>
+					<span class="wrap"></span>
+				</h1>
+				<button type="button" class="btn btn-primary btn-xlarge"><a href="#about">See more</a></button>
 			</div>
 		</div>
 	</div>
-	<div id="projects" class="row">
-		<div class="container">
-			<h2>Projects</h2>
-			<!--11/11/17--><!--<a href="projects/spongebobchat.html"><div class="port-ex" style="background-image:url('projects/img/spongebob.jpg');">
-				<p>Spongebob Bird meme text converter</p>
-			</div></a>-->
-			<!--27/12/16--><a href="projects/mastermind.html"><div class="port-ex" style="background-image:url('img/project4.png');">
-				<p>Mastermind game</p>
-			</div></a>
-			<!--11/12/16--><a href="projects/hexcolourgenerator.html"><div class="port-ex" style="background-image:url('img/project3.png');">
-				<p>Hex colour generator</p>
-			</div></a>
-			<!--11/12/16--><a href="projects/colourgame.html"><div class="port-ex" style="background-image:url('img/project1.png');">
-				<p>Colour game</p>
-			</div></a>
-			<!--10/12/16--><a href="projects/hangman.html"><div class="port-ex" style="background-image:url('img/project2.png');">
-				<p>Hangman</p>
-			</div></a>
-			<!--8/12/16--><a href="projects/twitchstatus.html"><div class="port-ex" style="background-image:url('img/project5.png');">
-				<p>TwitchTV channel status</p>
-			</div></a>
-			<!--8/12/16--><a href="projects/wikiviewer.html"><div class="port-ex" style="background-image:url('img/project6.png');">
-				<p>Wikipedia viewer</p>
-			</div></a>
-			<!--10/02/19--><a href="projects/weatherapp.html"><div class="port-ex" style="background-image:url('projects/img/pathInTheWoods.jpg');">
-				<p>Weather App</p>
-			</div></a>
-			<a href=""><div class="port-ex">
-				<p>Placeholder</p>
-			</div></a>
-		</div>
-	</div>
-	<div id="something" class="row">
-		<div class="container">
-			<div class="">
-				<h3>TITLE</h3>
-				<h4>SUBTITLE</h4>
-				<p>Nunc a elementum neque. Cras auctor varius lectus, eget blandit dui malesuada id. Nulla sit amet mauris facilisis velit eleifend ornare. Duis vel ex dolor. Praesent auctor, tortor nec aliquet vulputate, purus justo luctus enim, at sollicitudin ante ipsum a risus. Aliquam posuere vitae massa sed suscipit. Etiam at maximus mauris. Nulla efficitur ipsum sit amet magna auctor cursus. Praesent eleifend dictum massa, et mollis odio commodo sed.
-				</p>
-			</div>
-			<div class="">
-				<h3>TITLE</h3>
-				<h4>SUBTITLE</h4>
-				<p>Phasellus pharetra est ut ipsum imperdiet sodales. Nam blandit vulputate nunc egestas feugiat. Donec nisl tellus, elementum at enim eget, euismod aliquet leo. Nunc a elementum neque. Cras auctor varius lectus, eget blandit dui malesuada id. Nulla sit amet mauris facilisis velit eleifend ornare. Duis vel ex dolor. Praesent auctor, tortor nec aliquet vulputate, purus justo luctus enim, at sollicitudin ante ipsum a risus. 
-				</p>
-			</div>
-			<div class="">
-				<h3>TITLE</h3>
-				<h4>SUBTITLE</h4>
-				<p>Nunc cursus ligula vel libero pharetra, vitae commodo diam fringilla. Fusce feugiat metus rutrum magna dignissim maximus. In sit amet leo in tortor placerat maximus. Praesent tincidunt in lorem ac finibus. Curabitur cursus dui quis ex dapibus suscipit. Proin facilisis ex a ullamcorper tincidunt. Nunc pharetra quis nisl at vulputate. Curabitur pellentesque lorem eget fringilla luctus. Nulla facilisi. Sed viverra eleifend sapien, ac elementum sapien pellentesque ut. Ut ac blandit urna. Nunc eu venenatis velit. Aenean dapibus mauris sit amet metus volutpat bibendum. Proin sit amet commodo purus.
-				</p>
-			</div>
-			<div class="">
-				<h3>STITLE</h3>
-				<h4>SUBTITLE</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ornare urna non tellus mattis, sed aliquet tellus gravida. Mauris eget porta leo. 
-				</p>
-			</div>
-		</div>
-	</div>
-	<div id="contact" class="row">
-		<div class="container">
-			<div class="column left">
-				<h2>Contact me</h2>
-				<div class="wrapper">
-					<form><p>THIS DOES NOT WORK</p>
-						<div class="input-row">
-							<input type="text" name="name" required>
-							<label>Name*:</label>
-						</div>
-						<div class="input-row">
-							<input type="email" required>
-							<label>Email Address*:</label>
-						</div>
-						<div class="input-row">
-							<textarea name="message" required></textarea><br><br>
-							<label>Message*:</label>
-						</div>
-						<input type="submit" value="submit">
-					</form>
+	<div class="jumbotron edge-bottom" id="about">
+		<div class="container container-fluid bg-3 text-center">
+				<h3>About Me</h3><hr>
+			<div class="row slideanim vertical-align ">
+				<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+					<img class="img-responsive margin" style="width:100%" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_1_M73f5K7u7OCjRjJD_Qy9VhkQXsD-vWhhQVnK5HXPdo0PtD">
 				</div>
-			</div>
-			<div class="column right">
-				<h2>Find me</h2>
-				<div class="wrapper">
-					<div class="section">
-						<div class="column">
-							<div class="area">
-								<a href="#"><p><i class="fa fa-skype fa-2x" aria-hidden="true"></i> Skype</p><p>N/A</p></a>
+				<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor sapien sed tincidunt lacinia. In tempor, enim ullamcorper feugiat rhoncus, quam tellus facilisis nisi, quis dictum lacus mi vel ligula. Nunc cursus ligula vel libero pharetra, vitae commodo diam fringilla. Fusce feugiat metus rutrum magna dignissim maximus. In sit amet leo in tortor placerat maximus. Praesent tincidunt in lorem ac finibus. Curabitur cursus dui quis ex dapibus suscipit. Proin facilisis ex a ullamcorper tincidunt. Nunc pharetra quis nisl at vulputate. Curabitur pellentesque lorem eget fringilla luctus. Nulla facilisi. Sed viverra eleifend sapien, ac elementum sapien pellentesque ut. Ut ac blandit urna. Nunc eu venenatis velit. <a href="#contact">Get in contact</a>.
+				</div>
+			</div>  
+		</div>
+	</div>
+	
+	<div class="jumbotron" id="work">
+		<div class="container container-fluid bg-3 text-center"> 
+			<div class="row slideanim">
+				<h3>Some of my Work</h3><hr>
+				<div class="col-lg-6 col-md-12 col-sm-12">
+					<div class="col-md-12 work-card">
+						<a href="projects/weatherapp.html">
+							<img src="img/weatherapp.png" class="img-responsive" alt="Image">
+							<div class="text">
+								<p class="title">Weather App</p><h5>Takes data from API with JSON to get the weather. </h5>
+								<div class="divider"></div>
+								<p class="sub-title"><button type="button" class="btn btn-primary btn-medium">HTML</button><button type="button" class="btn btn-primary btn-medium">CSS</button><button type="button" class="btn btn-primary btn-medium">JS</button><button type="button" class="btn btn-primary btn-medium">JSON</button></p>
 							</div>
-							<div class="area">
-								<a href="#"><p><i class="fa fa-twitter fa-2x" aria-hidden="true"></i> Twitter</p><p>N/A</p></a>
-							</div>
-							<div class="area">
-								<a href="#"><p><i class="fa fa-envelope fa-2x" aria-hidden="true"></i> Email</p><p>N/A</p></a>
-							</div>
-						</div>
+						</a>
 					</div>
 				</div>
+				<div class="col-lg-6 col-md-12 col-sm-12">
+					<div class="col-md-12 work-card bmd-modalButton" data-toggle="modal" data-target="#myModal">
+						<a href="projects/twitchstatus.html">
+							<img src="img/twitchstatus.png" class="img-responsive" alt="Image">
+							<div class="text">
+								<p class="title">Twitch.tv streamer status</p><h5>Shows status of Twitch.tv streamers. </h5>
+								<div class="divider"></div>
+								<p class="sub-title"><button type="button" class="btn btn-primary btn-medium">HTML</button><button type="button" class="btn btn-primary btn-medium">CSS</button><button type="button" class="btn btn-primary btn-medium">JS</button><button type="button" class="btn btn-primary btn-medium">JSON</button></p>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6 col-sm-12">
+					<div class="col-md-12 work-card bmd-modalButton" data-toggle="modal" data-target="#myModal">
+						<a href="projects/colourgame.html">
+							<img src="img/colourgame.png" class="img-responsive" alt="Image">
+							<div class="text">
+								<p class="title">Odd Colour Game</p>
+								<div class="divider"></div>
+								<p class="sub-title"><button type="button" class="btn btn-primary btn-medium">HTML</button><button type="button" class="btn btn-primary btn-medium">CSS</button><button type="button" class="btn btn-primary btn-medium">JS</button></p>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6 col-sm-12">
+					<div class="col-md-12 work-card bmd-modalButton" data-toggle="modal" data-target="#myModal">
+						<a href="projects/hangman.html">
+							<img src="img/hangman.png" class="img-responsive" alt="Image">
+							<div class="text">
+								<p class="title">Hangman</p>
+								<div class="divider"></div>
+								<p class="sub-title"><button type="button" class="btn btn-primary btn-medium">HTML</button><button type="button" class="btn btn-primary btn-medium">CSS</button><button type="button" class="btn btn-primary btn-medium">JS</button></p>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6 col-sm-12">
+					<div class="col-md-12 work-card bmd-modalButton" data-toggle="modal" data-target="#myModal">
+						<a href="projects/hexcolourgenerator.html">
+							<img src="img/hexgen.png" class="img-responsive" alt="Image">
+							<div class="text">
+								<p class="title">Hex Colour Generator</p>
+								<div class="divider"></div>
+								<p class="sub-title"><button type="button" class="btn btn-primary btn-medium">HTML</button><button type="button" class="btn btn-primary btn-medium">CSS</button><button type="button" class="btn btn-primary btn-medium">JS</button></p>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6 col-sm-12">
+					<div class="col-md-12 work-card bmd-modalButton" data-toggle="modal" data-target="#myModal">
+						<a href="projects/mastermind.html">
+							<img src="img/mastermind.png" class="img-responsive" alt="Image">
+							<div class="text">
+								<p class="title">Mastermind</p>
+								<div class="divider"></div>
+								<p class="sub-title"><button type="button" class="btn btn-primary btn-medium">HTML</button><button type="button" class="btn btn-primary btn-medium">CSS</button><button type="button" class="btn btn-primary btn-medium">JS</button></p>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6 col-sm-12">
+					<div class="col-md-12 work-card bmd-modalButton" data-toggle="modal" data-target="#myModal">
+						<a href="projects/wikiviewer.html">
+							<img src="img/wikiviewer.png" class="img-responsive" alt="Image">
+							<div class="text">
+								<p class="title">Wikipedia viewer</p><h5>Utilises Wikipedia API. </h5>
+								<div class="divider"></div>
+								<p class="sub-title"><button type="button" class="btn btn-primary btn-medium">HTML</button><button type="button" class="btn btn-primary btn-medium">CSS</button><button type="button" class="btn btn-primary btn-medium">JS</button><button type="button" class="btn btn-primary btn-medium">JSON</button></p>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6 col-sm-12">
+					<div class="col-md-12 work-card bmd-modalButton" id="work-wip" data-toggle="modal" data-target="#myModal">
+						<a href="#">
+							<img src="img/placeholder.png" class="img-responsive" alt="Image">
+							<!--<div class="text">
+								<p class="title"></p><h5></h5>
+								<div class="divider"></div>
+								<p class="sub-title"><button type="button" class="btn btn-primary btn-medium">HTML</button><button type="button" class="btn btn-primary btn-medium">CSS</button><button type="button" class="btn btn-primary btn-medium">JS</button><button type="button" class="btn btn-primary btn-medium">JSON</button></p>
+							</div>-->
+						</a>
+					</div>
+				</div>
+				<div class="modal fade" id="myModal">
+					<div class="modal-dialog modal-lg">
+						<div class="modal-content bmd-modalContent">
+							<div class="modal-body">
+					        	<div class="close-button">
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					    		</div>
+						    	<div id="slider">
+									<a href="#work" class="control_next">>></a>
+									<a href="#work" class="control_prev"><</a>
+									<ul>
+										<li><img src=""></li>
+										<li><img src=""></li>
+										<li><img src=""></li>
+									</ul>  
+								</div>
+							</div>
+						</div><!-- /.modal-content -->
+					</div><!-- /.modal-dialog -->
+				</div><!-- /.modal -->
+
+			</div>
+		</div><br><br>
+	</div>
+	
+	
+	<div class="jumbotron edge-top" id="contact">
+		<div class="container container-fluid bg-3 text-center">
+			<div class="row">
+					<h3>Contact me</h3><hr>
+					<div class="wrapper">
+						<form>
+							<div class="input-row">
+								<input type="text" name="name" required>
+								<label>Name*:</label>
+							</div>
+							<div class="input-row">
+								<input type="email" required>
+								<label>Email Address*:</label>
+							</div>
+							<div class="input-row">
+								<textarea name="message" required></textarea><br><br>
+								<label>Message*:</label>
+							</div>
+							<input type="submit" value="submit">
+						</form>
+					</div>
+				
+			</div>
+			<div class="row" id="contact-under">
+				<h3>Don't be shy! Say Hello!</h3>
+				<a class="slide btn btn-default btn-lg linkedin-btn" href="#"><i class="fa fa-star"></i><span>LinkedIn</span></a>
+				<a class="slide btn btn-default btn-lg twitter-btn" href="#"><i class="fa fa-twitter"></i><span>Twitter</span></a>
+                <a class="slide btn btn-default btn-lg github-btn" href="#"><i class="fa fa-github"></i><span>Github</span></a>
 			</div>
 		</div>
 	</div>
-	<div id="fancySeparator">
+	<div class="container-fluid bg-3 text-center" id="footer-image">
+		<img src="https://i.postimg.cc/2C3kJgsD/footer.jpg">
+		<svg class="wavesmm" viewBox="0 0 100 20">
+			<path class="slideanim1" fill="rgb(57,184,229)" opacity="0.7" d="M0 30 V15 Q30 3 60 15 V30z"></path>
+			<path class="slideanim2" fill="rgb(57,184,229)" opacity="0.3" d="M-10 40 V10 Q10 1 40 15 V20z"></path>
+			<path class="slideanim1" fill="rgb(57,184,229)" opacity="0.7" d="M50 40 V20 Q70 0 100 5 V30z"></path>
+			<path class="slideanim" fill="rgb(57,184,229)" d="M0 30 V12 Q30 17 55 12 T100 11 V30z"></path>
+		</svg>
 	</div>
-	<footer>
-		<nav>
-			<ul>
-				<li><a href="#">Top</a></li>
-			</ul>
-		</nav>
+	<footer class="container-fluid text-center">
+		<span>Emily &copy; 2019 </span>
+		<a href="#top" title="To Top">
+			<span class="glyphicon glyphicon-chevron-up"></span>
+		</a>
 	</footer>
+
+	<script type="text/javascript" src="scripts/script.js"></script>
+
 </body>
 </html>
